maze.lessons.maze.island.IslandMaze.scala.error
Escaper:26: error: expected class or object definition
def Nord(){
^Escaper:46: error: Unmatched closing brace '}' ignored here
}
^